--- a/style.css
+++ b/style.css
@@ -12,3 +12,21 @@ ul,ol,li{
     list-style: none;
 }
 /*FIM DO RESET*/
+
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+header{
+    height: 200px;
+    background-color: cornflowerblue;
+}
+main{
+    flex-grow: 1;
+    background-color: blanchedalmond;
+}
+footer{
+    height: 100px;
+    background-color:mediumslateblue;
+}
