--- a/style.css
+++ b/style.css
@@ -41,13 +41,44 @@ main{
 }
 .conteudo{
     width: 50%;
-    background-color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+.conteudo h1{
+    font-size: 96px;
+}
+.conteudo p{
+    font-size: 32px;
+    width: 80%;
+}
+.conteudo button{
+    height:96px;
+    width: 300px;
+    background-color: black;
+    color: white;
+    font-size: 32px;
+}
+.conteudo .social{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+.conteudo .social div{
+    width: 800px;
+    height: 800px;
+    border-radius: 50%;
+    color: blue;
+}
+
 .destaque{
     width: 50%;
     background-color: darkorange;
 }
 footer{
     height: 100px;
-    background-color:mediumslateblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: darkorange;    
 }
